jira/jira-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jira-ingress
  namespace: jira
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jira.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jira
            port: 
              number: 8080
